.circleci/release_tracking/template_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    metadata:
      labels:
        version: ${APP_VERSION}
