.circleci/release_tracking/virtual_service_prod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtual-service
spec:
  hosts:
    - "${CERA_REGION}.circleci-fieldeng.com"
  gateways:
    - istio-ingress/${CERA_REGION}-istio-gateway-root
