.circleci/release_tracking/virtual_service_region.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtual-service
spec:
  hosts:
    - "dev.${CERA_REGION}.circleci-capitalone-demo.com"
  gateways:
    - istio-ingress/${CERA_REGION}-istio-gateway-2
